[project]
name = "drwchirp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.21.0",
    "celerite2>=0.3.2",
    "funsor>=0.4.5",
    "ipywidgets>=8.1.7",
    "jax<0.6",
    "jupyterlab>=4.4.2",
    "numpyro>=0.18.0",
    "pip>=25.1.1",
    "seaborn>=0.13.2",
]
